--- a/styles/Curso.module.css
+++ b/styles/Curso.module.css
@@ -10,17 +10,21 @@
   flex-direction: column;
   align-items: center;
 }
+.contenido h2{
+  line-height: 0.9em;
+}
 @media (min-width: 768px) {
   .contenido {
-    grid-column: 2 / 3;
+    grid-column: 1 / 3;
   }
 }
 .texto {
   color: var(--blanco);
   text-align: center;
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 .enlace {
+  cursor: pointer;
   display: block;
   text-decoration: none;
   text-align: center;
@@ -36,4 +40,8 @@
 .enlace:hover {
   background-color: var(--primary);
   color: var(--blanco);
+}
+
+.contenido h2{
+  margin: 0;
 }
