--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -22,18 +22,18 @@
   }
 }
 .navegacion a {
-  font-size: 2.8rem;
+  font-size: 2rem;
   color: var(--blanco);
   text-decoration: none;
-  font-weight: 800;
+  /* font-weight: 800; */
 }
 .navegacion a:hover {
   color: var(--primary);
 }
 
 .copyright {
-  font-size: 2.8rem;
+  font-size: 1rem;
   color: var(--blanco);
-  font-weight: 700;
+  /* font-weight: 700; */
   text-align: center;
 }
